--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.0",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-native": "0.71.6"
   },
   "devDependencies": {
