--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.12.0",
+    "@react-navigation/native": "^6.1.6",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-hook-form": "^7.43.9",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-screens": "~3.20.0",
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
