--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.71.6",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "yet": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
