--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.6",
+    "react-native-maps": "^1.5.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-webview": "^12.0.2",
     "react-navigation": "^4.4.4",
     "yet": "^0.1.0"
   },
